--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "peerDependencies": {
+    "eslint": "^8.57.0"
+  },
   "author": "",
   "license": "ISC"
 }
