--- a/simple-todo-meteor/package.json
+++ b/simple-todo-meteor/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "prettier": "3.2.5"
   }
 }
