--- a/simple-todo-meteor/package.json
+++ b/simple-todo-meteor/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-plugin-meteor-error": "file:../package",
+    "eslint-plugin-meteor-error": "^1.2.2",
     "prettier": "3.2.5"
   }
 }
